# ECDSA-Cracker

./: .gitignore  README.md  ecdsa_tutorial.ipynb  pyproject.toml  recover_private_keys.ipynb
data/: example.parquet  synthetic_signatures.parquet
ecdsa_cracker/: ECDSABreaker.py  SignatureDB.py  __init__.py  dataframe_schemas.py  ecdsa_helper.py
ecdsa_cracker/graph_utils/: Node.py  Propagater.py  Sig.py
keys_recovery/: ECDSABreaker.py  EcdsaBreaker.py  SignatureDB.py  dataframe_schemas.py  ecdsa_helper.py  recover_private_keys.ipynb
keys_recovery/graph_utils/: Node.py  Propagater.py
scripts/: generate_synthetic_data.py
signature_extraction/: README.md  extract_bch_signatures.ipynb  extract_signatures.py
signatures/: extract_signatures.py  utils.py
